--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "sh183694@gmail.com <sh183694@gamil.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pug": "^2.0.4"
   }
